Add leftPane component.

--- a/src/components/body/bodyComp.css
+++ b/src/components/body/bodyComp.css
@@ -5,5 +5,5 @@
   min-height: 100vh;
   letter-spacing: 0.03em;
   display: flex;
-  background-color: bisque;
+  /* background-color: bisque; */
 }
