Add overview component.

--- a/src/components/rightPane/rightPane.css
+++ b/src/components/rightPane/rightPane.css
@@ -1,5 +1,5 @@
 .right-pane {
-  background-color: wheat;
+  /* background-color: wheat; */
   position: absolute;
   /* top: 56px; */
   left: 250px;
